test/simple/typeerrors/Heuristics/AppNotEnough1.hs
module AppNotEnough1 where

sumInts :: [Int] -> Int
sumInts xs = foldr (+) 0 
